--- a/views/privada/gestion_categoria.html
+++ b/views/privada/gestion_categoria.html
@@ -127,9 +127,10 @@
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
-                <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
+            <form class="d-flex" method="post" id="search-bar">
+                <input class="form-control me-2" name="search" placeholder="Búsqueda de Datos" aria-label="Search"
+                    required>
+                <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
         <div class="container-fluid" id="opciones">
@@ -144,6 +145,7 @@
             <table class="table table-responsive table-bordered">
                 <thead>
                     <tr>
+                        <th>Identificador</th>
                         <th>Nombre</th>
                         <th>Visibilidad</th>
                         <th>Gestionar</th>
@@ -155,7 +157,6 @@
             </table>
         </div>
 
-
         <!-- Modal de AGREGAR REGISTRO-->
         <div class="modal fade" id="agregar" tabindex="-1">
             <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -165,13 +166,13 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Formulario de insert-->
-                    <form method="post" id="insert_form">
+                    <form method="post" id="insert-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="categoria" class="form-label">Nombre de Categoria.</label>
-                                    <input type="text" class="form-control" id="categoria" name="categoria"
-                                        placeholder="Escriba un nombre a la Categoria" required>
+                                    <label for="categoria" class="form-label">Nombre de Categoria</label>
+                                    <input type="text" class="form-control" id="nombre_categoria"
+                                        name="nombre_categoria" placeholder="Escriba un nombre a la Categoria" required>
                                 </div>
                             </div>
                         </div>
@@ -190,24 +191,29 @@
         </div>
         <!-- Modal de ACTUALIZAR REGISTRO -->
         <div class="modal fade" id="actualizar" tabindex="-1">
-            <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
                         <h5 class="modal-title" id="actualizarformLabel">Actualizar Categoria</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <!-- Formulario de update-->
-                    <form action="post" id="update_form">
+                    <!-- Formulario de insert-->
+                    <form method="post" id="update-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="categoria_update" class="form-label">Nombre de Categoria.</label>
-                                    <input type="text" class="form-control" id="categoria_update"
-                                        name="categoria_update" required>
-                                    <p></p>
-                                    <div class="custom-control custom-switch">
-                                        <input type="checkbox" class="custom-control-input" id="visibilidad">
-                                        <label class="custom-control-label" for="visibilidad">Visible?</label>
+                                    <label for="categoria" class="form-label">Nombre de Categoria.</label>
+                                    <input type="text" class="form-control" id="nombre_categoria_update"
+                                        name="nombre_categoria_update" placeholder="Escriba un nombre a la Categoria"
+                                        required>
+                                </div>
+                                <div class="col">
+                                    <div class="col">
+                                        <label for="" class="form-label">Visibilidad</label><br>
+                                        <label class="switch">
+                                            <input type="checkbox" id="visibilidad_update" name="visibilidad_update">
+                                            <span class="slider round"></span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
@@ -215,11 +221,12 @@
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
                                 <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
-                                            src="../../resources/img/iconos_formularios/editar_26px.png"></a></button>
-                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal">
-                                    <a class="nav-link"><img
+                                            src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
+                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
+                                        class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/cerrar_26px.png"></a></button>
                             </div>
+
                         </div>
                     </form>
                 </div>
@@ -237,10 +244,11 @@
                         Desea Eliminar la información de este registro?
                     </div>
                     <!-- Formulario de Update -->
-                    <form method="post" id="delete_form">
+                    <form method="post" id="delete-form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
-                            <button class="btn btn-primary" id="btnmenu">Confirmar</button>
+                            <button type="button" class="btn btn-primary" id="btnmenu"
+                                data-bs-dismiss="modal">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
                 </div>
@@ -298,7 +306,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="../../controller/privado/categoria.js"></script>
 </body>
 
 </html>
+
+<!-- 
+<div class="col">
+                                    <label for="" class="form-label">Visibilidad</label><br>
+                                    <label class="form-control">
+                                        <input type="checkbox" id="visibilidad_update" name="visibilidad_update">
+                                    </label>
+                                </div>
+-->
