--- a/views/privada/gestion_contrato.html
+++ b/views/privada/gestion_contrato.html
@@ -127,9 +127,10 @@
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
-                <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
+            <form class="d-flex" method="post" id="search-bar">
+                <input class="form-control me-2" name="search" placeholder="Búsqueda de Datos" aria-label="Search"
+                    required>
+                <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
         <div class="container-fluid" id="opciones">
@@ -155,7 +156,7 @@
                     </tr>
                 </thead>
                 <tbody id="tbody-Contrato">
-                    
+
                 </tbody>
             </table>
         </div>
@@ -173,20 +174,24 @@
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="propietario" class="form-label">Propietario</label>
-                                    <select name="propietario" id="propietario" class="form-control" required>
+                                    <label for="id_propietario" class="form-label">Propietario</label>
+                                    <select onchange="seleccionarPropietario()" id="id_propietario"
+                                        name="id_propietario" class="form-control">
                                     </select>
 
-                                    <label for="propiedad" class="form-label">Propiedad</label>
-                                    <select name="propiedad" id="propiedad" class="form-control" required>
+                                    <label for="id_propiedad" class="form-label">Propiedad</label>
+                                    <select onchange="seleccionarPropiedad()" id="id_propiedad" name="id_propiedad"
+                                        class="form-control">
                                     </select>
 
-                                    <label for="inquilino" class="form-label">Inquilino</label>
-                                    <select name="inquilino" id="inquilino" class="form-control" required>
+                                    <label for="id_inquilino" class="form-label">Inquilino</label>
+                                    <select onchange="seleccionarInquilino()" id="id_inquilino" name="id_inquilino"
+                                        class="form-control">
                                     </select>
 
-                                    <label for="empleado" class="form-label">Empleado</label>
-                                    <select name="empleado" id="empleado" class="form-control" required>
+                                    <label for="id_empleado" class="form-label">Empleado</label>
+                                    <select onchange="seleccionarEmpleado()" id="id_empleado" name="id_empleado"
+                                        class="form-control">
                                     </select>
 
                                     <label for="fecha_firma" class="form-label">Fecha de Firma</label>
@@ -198,10 +203,10 @@
                                     <textarea name="descripcion" id="descripcion" rows="4" class="form-control"
                                         placeholder="Ingrese una descripción del Contrato" required></textarea>
 
-                                    <label for="upload_imagen" class="form-label">Imagen</label>
-                                    <a class="btn" name="archivo" id="upload_image">
+                                    <label for="formGroupExampleInput" class="form-label">Imagen</label><br>
+                                    <a class="btn" id="upload_image" required>
                                         <input type="file" class="form-control form-control-sm form-Input-Style"
-                                            required>
+                                            name="archivo" id="archivo">
                                         <img src="../../resources/img/iconos_formularios/download_100px.png">
                                     </a>
                                 </div>
@@ -211,8 +216,9 @@
                             <div class="btn-group" role="group" id="opcionesModal">
                                 <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
-                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><img
-                                        src="../../resources/img/iconos_formularios/cerrar_26px.png"></a></button>
+                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
+                                        class="nav-link"><img
+                                            src="../../resources/img/iconos_formularios/cerrar_26px.png"></a></button>
                             </div>
                         </div>
                     </form>
@@ -227,43 +233,45 @@
                         <h5 class="modal-title">Actualizar Contrato</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <!-- Formulario de update-->
+                    <!-- Formulario de Actualizacion-->
                     <form method="post" id="update_form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
-                                    <label for="propietario_update" class="form-label">Propietario</label>
-                                    <select name="propietario_update" id="propietario_update" class="form-control"
-                                        required>
+                                    <label for="id_propietario" class="form-label">Propietario</label>
+                                    <select onchange="seleccionarPropietario()" id="id_propietario_update"
+                                        name="id_propietario_update" class="form-control">
                                     </select>
 
-                                    <label for="propiedad_update" class="form-label">Propiedad</label>
-                                    <select name="propiedad_update" id="propiedad_update" class="form-control" required>
+                                    <label for="id_propiedad" class="form-label">Propiedad</label>
+                                    <select onchange="seleccionarPropiedad()" id="id_propiedad_update"
+                                        name="id_propiedad_update" class="form-control">
                                     </select>
 
-                                    <label for="inquilino_update" class="form-label">Inquilino</label>
-                                    <select name="inquilino_update" id="inquilino_update" class="form-control" required>
+                                    <label for="id_inquilino" class="form-label">Inquilino</label>
+                                    <select onchange="seleccionarInquilino()" id="id_inquilino_update"
+                                        name="id_inquilino_update" class="form-control">
                                     </select>
 
-                                    <label for="empleado_update" class="form-label">Empleado</label>
-                                    <select name="empleado_update" id="empleado_update" class="form-control" required>
+                                    <label for="id_empleado" class="form-label">Empleado</label>
+                                    <select onchange="seleccionarEmpleado()" id="id_empleado_update"
+                                        name="id_empleado_update" class="form-control">
                                     </select>
 
-                                    <label for="fecha_firma_update" class="form-label">Fecha de Firma</label>
+                                    <label for="fecha_firma" class="form-label">Fecha de Firma</label>
                                     <input type="date" class="form-control" id="fecha_firma_update"
                                         name="fecha_firma_update" required>
                                 </div>
                                 <div class="col">
-                                    <div class="col">
-                                        <label for="descripcion_update" class="form-label">Descripción</label>
-                                        <textarea name="descripcion_update" id="descripcion_update" rows="4"
-                                            class="form-control" required></textarea>
-                                    </div>
+                                    <label for="descripcion" class="form-label">Descripción</label>
+                                    <textarea name="descripcion_update" id="descripcion_update" rows="4"
+                                        class="form-control" placeholder="Ingrese una descripción del Contrato"
+                                        required></textarea>
 
-                                    <label for="upload_imagen" class="form-label">Imagen</label>
-                                    <a class="btn" name="archivo" id="upload_image">
+                                    <label for="formGroupExampleInput" class="form-label">Imagen</label><br>
+                                    <a class="btn" id="upload_image" required>
                                         <input type="file" class="form-control form-control-sm form-Input-Style"
-                                            required>
+                                            name="archivo" id="archivo">
                                         <img src="../../resources/img/iconos_formularios/download_100px.png">
                                     </a>
                                 </div>
@@ -296,8 +304,9 @@
                     <!-- Formulario de Update -->
                     <form method="post" id="delete_form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
-                            <button class="btn btn-primary" id="btnmenu">Confirmar</button>
+                            <button type="button" class="btn btn-primary" id="btnmenu"
+                                data-bs-dismiss="modal">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
                 </div>
@@ -356,6 +365,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="../../controller/privado/contrato.js"></script>
 
 </body>
