--- a/views/privada/gestion_factura.html
+++ b/views/privada/gestion_factura.html
@@ -129,9 +129,10 @@
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
-                <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
+            <form class="d-flex" method="post" id="search-bar">
+                <input class="form-control me-2" name="search" placeholder="Búsqueda de Datos" aria-label="Search"
+                    required>
+                <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
 
@@ -161,13 +162,13 @@
                     </tr>
                 </thead>
                 <tbody id="tbody-Factura">
-                   
+
                 </tbody>
             </table>
         </div>
 
         <!-- Modal de AGREGAR REGISTRO-->
-        <div class="modal fade" id="agregarform" tabindex="-1">
+        <div class="modal fade" id="agregar" tabindex="-1">
             <div class="modal-dialog modal-xl modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
@@ -175,12 +176,12 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Formulario de Insert-->
-                    <form method="post" id="insert_form">
+                    <form method="post" id="insert-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
                                     <label for="factura" class="form-label">Código de Factura</label>
-                                    <input type="text" class="form-control" id="factura" name="factura"
+                                    <input type="text" class="form-control" id="factura" name="codigo_factura"
                                         placeholder="Escriba el número de su factura" required>
 
                                     <label for="descripcion" class="form-label">Descripción</label>
@@ -197,28 +198,27 @@
                                         placeholder="Escriba de SubTotal" required>
 
                                     <label for="iva" class="form-label">IVA</label>
-                                    <input type="number" class="form-control" id="iva" name="iva" placeholder="IVA"
+                                    <input type="number" class="form-control" id="IVA" name="IVA" placeholder="IVA"
                                         required>
 
-                                    <label for="venta_grabada" class="form-label">Venta grabada</label>
-                                    <input type="text" class="form-control" id="venta_grabada" name="venta_grabada"
+                                    <label for="venta_gravada" class="form-label">Venta grabada</label>
+                                    <input type="text" class="form-control" id="venta_gravada" name="venta_gravada"
                                         placeholder="Escriba la venta grabada" required>
 
                                     <label for="fecha_emision" class="form-label">Fecha de emisión</label>
                                     <input type="date" class="form-control" id="fecha_emision" name="fecha_emision"
                                         required>
 
-                                    <label for="tipo_factura" class="form-label">Tipo de Factura</label>
-                                    <select id="tipo_factura" name="tipo_factura" class="form-control">
-                                        <option value="value1" selected>Factura</option>
-                                        <option value="value2">Credito Fiscal</option>
+                                    <label for="id_inquilino" class="form-label">Inquilino</label>
+                                    <select onchange="seleccionarInquilino()" id="id_inquilino" name="id_inquilino"
+                                        class="form-control">
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
                                 <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
                                         class="nav-link"><img
@@ -238,13 +238,13 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <!-- Formulario de Update-->
-                    <form method="post" id="update_form">
+                    <form method="post" id="update-form">
                         <div class="modal-body" id="formModal">
                             <div class="row">
                                 <div class="col">
                                     <label for="factura_update" class="form-label">Código de Factura</label>
-                                    <input type="text" class="form-control" id="factura_update" name="factura_update"
-                                        required>
+                                    <input type="text" class="form-control" id="codigo_factura_update"
+                                        name="codigo_factura_update" required>
 
                                     <label for="descripcion" class="form-label">Descripción</label>
                                     <textarea id="descripcion_update" name="descripcion_update" rows="4"
@@ -260,32 +260,30 @@
                                         name="subtotal_update" required>
 
                                     <label for="iva_update" class="form-label">IVA</label>
-                                    <input type="number" class="form-control" id="iva_update" name="iva_update"
+                                    <input type="number" class="form-control" id="IVA_update" name="IVA_update"
                                         required>
 
                                     <label for="venta_grabada_update" class="form-label">Venta grabada</label>
-                                    <input type="text" class="form-control" id="venta_grabada_update"
-                                        name="venta_grabada_update" required>
+                                    <input type="text" class="form-control" id="venta_gravada_update"
+                                        name="venta_gravada_update" required>
 
                                     <label for="fecha_emision_update" class="form-label">Fecha de emisión</label>
                                     <input type="date" class="form-control" id="fecha_emision_update"
                                         name="fecha_emision_update" required>
 
-                                    <label for="tipo_factura_update" class="form-label">Tipo de Factura</label>
-                                    <select id="tipo_factura_update" name="tipo_factura_update" class="form-control">
-                                        <option value="value1" selected>Factura</option>
-                                        <option value="value2">Credito Fiscal</option>>
+                                    <label for="id_inquilino" class="form-label">Inquilino</label>
+                                    <select onchange="seleccionarInquilino()" id="id_inquilino_update"
+                                        name="id_inquilino_update" class="form-control">
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" id="btnmenu"><a
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                            src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
+                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
                                         class="nav-link"><img
-                                            src="../../resources/img/iconos_formularios/editar_26px.png"></a></button>
-                                <button type="button" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"
-                                    aria-label="Close"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/cerrar_26px.png"></a></button>
                             </div>
                         </div>
@@ -305,10 +303,11 @@
                         Desea Eliminar la información de este registro?
                     </div>
                     <!-- Formulario de Update -->
-                    <form method="post" id="delete_form">
+                    <form method="post" id="delete-form">
                         <div class="modal-footer">
-                            <button class="btn btn-primary" id="btnmenu">Volver</button>
-                            <button class="btn btn-primary" id="btnmenu">Confirmar</button>
+                            <button type="button" class="btn btn-primary" id="btnmenu"
+                                data-bs-dismiss="modal">Volver</button>
+                            <button type="submit" class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
                 </div>
@@ -363,7 +362,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="../../controller/privado/factura.js"></script>
+
 
 </body>
 
