--- a/views/privada/gestion_empleado.html
+++ b/views/privada/gestion_empleado.html
@@ -102,9 +102,10 @@
     <main>
         <!-- Searchbar -->
         <div class="container-fluid" id="busqueda">
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Búsqueda de Datos" aria-label="Search">
-                <a class="nav-link" href="#"><img src="../../resources/img/iconos_navbar/search_24px.png"></a>
+            <form class="d-flex" method="post" id="search-bar">
+                <input class="form-control me-2" name="search" placeholder="Búsqueda de Datos" aria-label="Search"
+                    required>
+                <button class="btn" type="submit"><img src="../../resources/img/iconos_navbar/search_24px.png"></button>
             </form>
         </div>
 
@@ -204,7 +205,8 @@
                                 <div class="col">
                                     <label for="upload_image" class="form-label">Imagen</label>
                                     <a class="btn" id="upload_image" name="archivo">
-                                        <input type="file" class="form-control form-control-sm form-Input-Style">
+                                        <input name="archivo" type="file"
+                                            class="form-control form-control-sm form-Input-Style">
                                         <img src="../../resources/img/iconos_formularios/download_100px.png">
                                     </a>
                                 </div>
@@ -214,10 +216,9 @@
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
                                 <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
-                                            src="../../resources/img/iconos_formularios/agregar_26px.png"></a></button>
-                                <button type="submit" class="btn btn-primary" id="btnmenu" data-bs-dismiss="modal"><a
-                                        class="nav-link"><img
-                                            src="../../resources/iconos_formularios/cerrar_26px.png"></a></button>
+                                            src="../img/iconos_formularios/editar_26px.png"></a></button>
+                                <button type="button" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                            src="../img/iconos_formularios/cerrar_26px.png"></a></button>
                             </div>
                         </div>
                     </form>
@@ -270,13 +271,13 @@
                                     <input type="text" class="form-control" id="nit_update" name="nit_update">
 
                                     <label for="tipo_empleado_update" class="form-label">Tipo de Empleado</label>
-                                    <select name="select" class="form-control" id="tipo_empleado_update"
+                                    <select  class="form-control" id="tipo_empleado_update"
                                         name="tipo_empleado_update">
 
                                     </select>
 
                                     <label for="estado_empleado_update" class="form-label">Estado de Empleado</label>
-                                    <select name="select" class="form-control" id="estado_empleado_update"
+                                    <select  class="form-control" id="estado_empleado_update"
                                         name="estado_empleado_update">
 
                                     </select>
@@ -284,7 +285,7 @@
                                 <div class="col">
                                     <label for="upload_image" class="form-label">Imagen</label>
                                     <a class="btn" id="upload_image" name="archivo">
-                                        <input type="file" class="form-control form-control-sm form-Input-Style">
+                                        <input name="archivo_update" type="file" class="form-control form-control-sm form-Input-Style">
                                         <img src="../../resources/img/iconos_formularios/download_100px.png">
                                     </a>
                                 </div>
@@ -293,7 +294,7 @@
                         <!-- Fotter del modal -->
                         <div class="modal-footer">
                             <div class="btn-group" role="group" id="opcionesModal">
-                                <button type="button" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
+                                <button type="submit" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/editar_26px.png"></a></button>
                                 <button type="button" class="btn btn-primary" id="btnmenu"><a class="nav-link"><img
                                             src="../../resources/img/iconos_formularios/cerrar_26px.png"></a></button>
@@ -303,8 +304,8 @@
                 </div>
             </div>
         </div>
-         <!-- Modal de ELIMINAR -->
-         <div class="modal fade" id="eliminar" tabindex="-1">
+        <!-- Modal de ELIMINAR -->
+        <div class="modal fade" id="eliminar" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header" id="formHeader">
@@ -317,8 +318,7 @@
                     <!-- Formulario de Update -->
                     <form method="post" id="delete_form">
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" id="btnmenu"
-                                data-bs-dismiss="modal">Volver</button>
+                            <button class="btn btn-primary" id="btnmenu">Volver</button>
                             <button type="submit" class="btn btn-primary" id="btnmenu">Confirmar</button>
                         </div>
                     </form>
